fix(Placeholder): use flex for stretched (#4809)
- fixes #618

--- a/packages/vkui/src/components/Placeholder/Placeholder.module.css
+++ b/packages/vkui/src/components/Placeholder/Placeholder.module.css
@@ -5,11 +5,7 @@
 }
 
 .Placeholder--stretched {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  flex: 1 0;
   padding-top: inherit;
   padding-bottom: inherit;
 }
